tests/ui/traits/non_lifetime_binders/canonical-response-placeholder-leak-issue-159704.stderr
error[E0277]: the size for values of type `A` cannot be known at compilation time
  --> $DIR/canonical-response-placeholder-leak-issue-159704.rs:8:22
   |
LL | fn trivial<A: ?Sized>()
   |            - this type parameter needs to be `Sized`
LL | where
LL |     for<B> Fn(A, B): Fn(A, A) + 'static,
   |                      ^^^^^^^^ doesn't have a size known at compile-time
   |
   = note: required because it appears within the type `(A, A)`
note: required by an implicit `Sized` bound in `Fn`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
help: consider removing the `?Sized` bound to make the type parameter `Sized`
   |
LL - fn trivial<A: ?Sized>()
LL + fn trivial<A>()
   |

error[E0277]: the size for values of type `A` cannot be known at compilation time
  --> $DIR/canonical-response-placeholder-leak-issue-159704.rs:8:33
   |
LL | fn trivial<A: ?Sized>()
   |            - this type parameter needs to be `Sized`
LL | where
LL |     for<B> Fn(A, B): Fn(A, A) + 'static,
   |                                 ^^^^^^^ doesn't have a size known at compile-time
   |
   = note: only the last element of a tuple may have a dynamically sized type
help: consider removing the `?Sized` bound to make the type parameter `Sized`
   |
LL - fn trivial<A: ?Sized>()
LL + fn trivial<A>()
   |

error[E0277]: expected an `Fn(_, _)` closure, found `(dyn Fn(_, B) + 'static)`
  --> $DIR/canonical-response-placeholder-leak-issue-159704.rs:15:5
   |
LL |     trivial();
   |     ^^^^^^^^^ expected an `Fn(_, _)` closure, found `(dyn Fn(_, B) + 'static)`
   |
   = help: the trait `Fn(_, _)` is not implemented for `(dyn Fn(_, B) + 'static)`
note: required by a bound in `trivial`
  --> $DIR/canonical-response-placeholder-leak-issue-159704.rs:8:22
   |
LL | fn trivial<A: ?Sized>()
   |    ------- required by a bound in this function
LL | where
LL |     for<B> Fn(A, B): Fn(A, A) + 'static,
   |                      ^^^^^^^^ required by this bound in `trivial`

error[E0271]: type mismatch resolving `<dyn Fn(_, B) as FnOnce<(_, _)>>::Output == ()`
  --> $DIR/canonical-response-placeholder-leak-issue-159704.rs:15:5
   |
LL |     trivial();
   |     ^^^^^^^^^ types differ
   |
note: required by a bound in `trivial`
  --> $DIR/canonical-response-placeholder-leak-issue-159704.rs:8:22
   |
LL | fn trivial<A: ?Sized>()
   |    ------- required by a bound in this function
LL | where
LL |     for<B> Fn(A, B): Fn(A, A) + 'static,
   |                      ^^^^^^^^ required by this bound in `trivial`

error[E0277]: expected an `Fn(_, _)` closure, found `(dyn Fn(_, B) + 'static)`
  --> $DIR/canonical-response-placeholder-leak-issue-159704.rs:21:5
   |
LL |     trivial();
   |     ^^^^^^^^^ expected an `Fn(_, _)` closure, found `(dyn Fn(_, B) + 'static)`
   |
   = help: the trait `Fn(_, _)` is not implemented for `(dyn Fn(_, B) + 'static)`
note: required by a bound in `trivial`
  --> $DIR/canonical-response-placeholder-leak-issue-159704.rs:8:22
   |
LL | fn trivial<A: ?Sized>()
   |    ------- required by a bound in this function
LL | where
LL |     for<B> Fn(A, B): Fn(A, A) + 'static,
   |                      ^^^^^^^^ required by this bound in `trivial`

error[E0271]: type mismatch resolving `<dyn Fn(_, B) as FnOnce<(_, _)>>::Output == ()`
  --> $DIR/canonical-response-placeholder-leak-issue-159704.rs:21:5
   |
LL |     trivial();
   |     ^^^^^^^^^ types differ
   |
note: required by a bound in `trivial`
  --> $DIR/canonical-response-placeholder-leak-issue-159704.rs:8:22
   |
LL | fn trivial<A: ?Sized>()
   |    ------- required by a bound in this function
LL | where
LL |     for<B> Fn(A, B): Fn(A, A) + 'static,
   |                      ^^^^^^^^ required by this bound in `trivial`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0271, E0277.
For more information about an error, try `rustc --explain E0271`.
